--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-remark-images": "^6.2.0",
     "gatsby-source-filesystem": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
