--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-remark-images": "^6.2.0",
     "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
