--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^4.5.4",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-remark-images": "^6.6.0",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
