--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^4.5.4",
+    "gatsby-plugin-feed": "^4.6.0",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-remark-images": "^6.6.0",
