--- a/requirements.in
+++ b/requirements.in
@@ -1,94 +1,2 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-timeout==4.0.2
-attrs==21.4.0
-Babel==2.9.1
-backcall==0.2.0
-bleach==4.1.0
-blinker==1.4
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-cloudpickle==2.0.0
-colorama==0.4.4
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-docutils==0.18.1
-doit==0.34.2
-entrypoints==0.4
-executing==0.8.3
-frozenlist==1.3.0
-ghp-import==2.0.2
-hsluv==5.0.2
-html5lib==1.1
-idna==3.3
-ipykernel==6.9.1
-ipython==8.1.1
-ipython-genutils==0.2.0
-jedi==0.18.1
-Jinja2==3.0.3
-jsonschema==4.4.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-lxml==4.8.0
-Mako==1.1.6
-Markdown==3.3.6
-MarkupSafe==2.1.0
-matplotlib-inline==0.1.3
-micawber==0.5.4
-mistune==0.8.4
-multidict==6.0.2
-natsort==8.1.0
-nbclient==0.5.12
-nbconvert==6.4.2
-nbformat==5.1.3
-nest-asyncio==1.5.4
-Nikola==8.2.0
-notebook==6.4.8
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-phpserialize==1.3
-pickleshare==0.7.5
-piexif==1.1.3
-Pillow==9.0.1
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-pure-eval==0.2.2
-pycparser==2.21
-pygal==3.0.0
-Pygments==2.11.2
-pyparsing==3.0.7
-pyphen==0.12.0
-pyrsistent==0.18.1
-PyRSS2Gen==1.1
-python-dateutil==2.8.2
-pytz==2021.3
-pywin32==303
-pywinpty==2.0.5
-pyzmq==22.3.0
-requests==2.27.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-Send2Trash==1.8.0
-six==1.16.0
-smartypants==2.0.1
-stack-data==0.2.0
-terminado==0.13.3
-testpath==0.6.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.1.1
-typogrify==2.0.7
-Unidecode==1.3.3
-urllib3==1.26.8
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-Yapsy==1.12.2
-yarl==1.7.2
+Nikola
+markdown==3.3
