--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # website: https://getnikola.com/
 
 .doit.db
+.doit.db.*
 *.py[cod]
 cache/
 output/
@@ -38,6 +39,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+requirements.in
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
